fixed bug where scrollbar was showing up on mobile browsers

--- a/www/css/styles.mobile.less
+++ b/www/css/styles.mobile.less
@@ -88,7 +88,7 @@
             display: block;
         }
     }
-    ul {
+    ul.events {
         height: auto;
         overflow-x: visible;
         overflow-y: visible;
